--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,8 @@
     "@prisma/client": "^6.3.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
+    "helmet": "^8.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
